# Pith-Train

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: precommit-check.yml
benchmarks/operators/: utilities.py
examples/build_tokenized_corpus/: README.md  launch.sh
examples/convert_checkpoint/: README.md  launch.sh
examples/pretrain_language_model/: README.md  launch.sh
pithtrain/: config.py
pithtrain/dualpipe/: __init__.py  comm.py  dualpipev.py  execution.py  layer_partition.py  modeling.py  overlap.py  utils.py
pithtrain/layers/: deepgemm_fp8_linear.py  factory.py  group_linear.py
pithtrain/models/: deepseek_v2_lite.py  gpt_oss.py  interface.py  qwen3_30b_a3b.py
pithtrain/modules/: checkpoint.py  dataset.py  distributed.py  load_balance.py  logging.py  training.py
pithtrain/operators/: all_to_all.py  clamped_swiglu.py  cross_entropy.py  deepgemm_fp8_quantize.py  ep_dispatch.py  flash_attn_v4.py  silu_mul.py  token_scatter.py
pithtrain/tasks/: build_tokenized_corpus.py  convert_checkpoint.py  pretrain_language_model.py
tests/: test_clamped_swiglu.py  test_deepgemm_fp8_linear_correctness.py  test_deepseek_backward_compat.py  test_ep_dedup_dispatch.py  test_fp8_quantize_kernels.py  test_fsdp.py  test_fsdp.sh  test_grouped_linear_correctness.py  test_layer_partition.py  test_mla_cp.sh  test_online_softmax_combine_log2.py  test_ring_attention.py  test_ring_mla_attention.py  test_silu_mul.py
tests/operators/: utilities.py
tools/memory_estimator/: __init__.py  __main__.py  activation_profile.py  (+4 more)
(+51 files in other folders)
